--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,17 @@ android {
         }
     }
 }
+repositories {
+    maven {
+        url  "http://dl.bintray.com/kii/KiiAndroidSDK"
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.google.android.gms:play-services:7.8.0'
     compile project(':IoTCloud-AndroidSDK:iotcloudsdk')
+    compile 'com.kii:cloud-sdk:2.2.0:library@aar'
+    compile 'org.jdeferred:jdeferred-android-aar:1.2.4'
 }
