--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.8.0'
     compile project(':IoTCloud-AndroidSDK:iotcloudsdk')
     compile 'com.kii:cloud-sdk:2.2.0:library@aar'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
+    compile 'com.squareup.okhttp:okhttp-apache:2.3.0'
     compile 'org.jdeferred:jdeferred-android-aar:1.2.4'
 }
