--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.google.android.gms:play-services:7.8.0'
-    compile project(':IoTCloud-AndroidSDK:iotcloudsdk')
+    compile project(path: ':IoTCloud-AndroidSDK:iotcloudsdk', configuration: 'debug')
     compile 'com.kii:cloud-sdk:2.2.0:library@aar'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okhttp:okhttp-apache:2.3.0'
