--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".CreateCommandActivity"
             android:label="@string/title_activity_create_command" >
         </activity>
+        <activity
+            android:name=".CreateTriggerActivity"
+            android:label="@string/title_activity_create_trigger" >
+        </activity>
     </application>
 
 </manifest>
