added submodule https://github.com/JayH5/drag-sort-listview

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':IoTCloud-AndroidSDK:iotcloudsdk'
+include ':app', ':IoTCloud-AndroidSDK:iotcloudsdk', ':libraries:drag-sort-listview:library'
