--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,18 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.google.android.gms:play-services:7.8.0'
     compile project(path: ':IoTCloud-AndroidSDK:iotcloudsdk', configuration: 'debug')
+    compile (project(':libraries:drag-sort-listview:library')) {
+        exclude module: 'support-v4'
+    }
     compile 'com.kii:cloud-sdk:2.2.0:library@aar'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okhttp:okhttp-apache:2.3.0'
     compile 'org.jdeferred:jdeferred-android-aar:1.2.4'
+    compile ('org.codepond:wizardroid:1.3.0') {
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+    }
 }
