--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,12 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <permission android:name="com.kii.iotcloudsample.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="com.kii.iotcloudsample.permission.C2D_MESSAGE" />
+
     <application
         android:name=".IoTCloudSampleApplication"
         android:allowBackup="true"
@@ -35,6 +41,14 @@
             android:name=".CreateTriggerActivity"
             android:label="@string/title_activity_create_trigger" >
         </activity>
+        <service android:name=".GCMReceiverService" />
+        <receiver android:name=".PushBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.example.pushtest" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
