--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services:7.8.0'
-    compile project(path: ':thing-if-AndroidSDk:thingif', configuration: 'debug')
+    compile project(path: ':thing-if-AndroidSDK:thingif', configuration: 'debug')
     compile (project(':libraries:drag-sort-listview:library')) {
         exclude module: 'support-v4'
     }
