--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <permission android:name="com.kii.thingifsample.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-    <uses-permission android:name="com.kii.iotcloudsample.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.kii.thingifsample.permission.C2D_MESSAGE" />
 
     <application
         android:name="com.kii.thingifsample.IoTCloudSampleApplication"
