Fixed setting file.

--- a/app/src/main/assets/settings.properties
+++ b/app/src/main/assets/settings.properties
@@ -1,3 +1,7 @@
-appId=9232262b
-appKey=9009c4a0c829e3f723c4426fe3b03c02
-appHost=api-development-jp.internal.kii.com
+# go to https://developer.kii.com and create your app if you don't have yet.
+appId={your app id}
+appKey={your app key}
+# api.kii.com for app located in us.
+# api-cn3.kii.com for app located in cn.
+# api-sg.kii.com for app located in sg.
+appHost=api-jp.kii.com
